syntax = "proto3";
package common.common;

option java_multiple_files = false;
option java_package = "com.example.proto.common.common";
option java_outer_classname = "Common";

enum MsgType {
    // NULL
    MSG_TYPE_NUL = 0;
    // 握手
    HAND_SHAKE = 1;
    // 心跳
    HEART_BEAT = 2;
    // 抢占线
    KICK = 3;
    // 单聊
    SINGLE_CHAT = 4;
    // 挥手
    BYE = 5;
}

enum MsgContentType {
    MSG_CONTENT_NUL = 0;
    // 文本消息
    TEXT = 1;
}

enum ReadStatus {
    // 未读
    UNREAD = 0;
    // 已读
    READ = 1;
}

message Msg {
    // 消息头
    Head head = 1;
    // 消息体
    Body body = 2;
}

message Body {
    string content = 1;
}

message ExtraHeader {
    string key = 1;
    string value = 2;
}

message Head {
    // 消息id
    int64 msg_id = 1;
    // 消息类型
    MsgType msg_type = 2;
    // 消息内容类型
    MsgContentType msg_content_type = 3;
    // 消息发送者id
    int64 from_id = 4;
    // 消息接收者id
    int64 to_id = 5;
    // 消息时间戳
    int64 timestamp = 6;
    // 状态报告
    int32 status_report = 7;
    // 扩展字段，以key/value形式存放的json
    repeated ExtraHeader extends = 8;
}

// 错误码
enum ErrCode {
    ERRORCODE_NULL = 0;
    // 成功
    SUCCESS = 1;
    // 失败
    FAIL = -1;
    // 单发用户🆔id空
    SEND_MSG_INDIVIDUALLY_TO_UID_NUL = 101;
    // 单发用户🆔id空
    SEND_MSG_INDIVIDUALLY_MSG_NUL = 102;
    // 发送者id空
    SEND_MSG_INDIVIDUALLY_FROM_ID_NUL = 103;
    // 获取未读消息用户id空
    GET_UNREAD_MSG_USER_ID_NUL = 150;
}

message ErrorMsg {
    // 错误码
    ErrCode error_code = 1;
    // 错误信息
    string msg = 2;
}